# mini_project

./: brute_test_out.txt  optimal_test_out.txt
mini_project/Filter_Pipeline/Filter_Pipeline_APIs_Free/: CMakeLists.txt  Filter_Pipeline_APIs_Free.cpp  Filter_Pipeline_APIs_Free_optimized_beta_version.cpp  README.md
mini_project/Object_classification/Object_classification_PointNet_V1_3_classes/: Code_to_use_for_prediction_3classes.py  Labeling_dataset.py  Model_testing_and_GPU_testbench.py
